--- a/src/App.css
+++ b/src/App.css
@@ -68,3 +68,12 @@
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;     /* Firefox */
 }
+
+.hide-scrollbar {
+  overflow: scroll; /* or overflow: auto; */
+  scrollbar-width: none; /* Firefox */
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, and Opera */
+}
